--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -1,1 +1,34 @@
+name: Build-and-Test
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+    
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    # Checkout all sources from git
+    - name: Checkout sources
+      uses: actions/checkout@v2
+
+    # Install dotnet SDK
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+
+    # Restore NuGet packages
+    - name: Restore dependencies
+      run: dotnet restore
+
+    # Build the project
+    - name: Build
+      run: dotnet build --no-restore
+
+    # Run tests
+    - name: Test
+    - run: dotnet test --no-build --verbosity normal
 
