--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -30,5 +30,5 @@ jobs:
 
     # Run tests
     - name: Test
-    - run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal
 
